# apply_n_reach-jobs_tracker

./: .gitattributes  .gitignore  CLAUDE.md  README.md  installation.profile
.claude/: CLAUDE.md
backend/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini  user-profile-development-plan.md
backend/alembic/: env.py
backend/alembic/tests/: __init__.py  test_alembic_config.py
backend/alembic/versions/: 0001_add_personal_summary_location_phone.py  0002_add_research_journal_year.py  0003_add_projects_technologies.py  0005_jp_parity_schema_updates.py  1e74ccf552b8_initial.py  89bfcfd36bee_job_tracker_add_status_history_.py  __init__.py  a1b2c3d4e5f6_add_user_profile_base.py  a9c2e41fd6b0_add_job_opening_rendered_resumes.py  b2c3d4e5f6a7_add_user_profile_sections.py  b81c3184eb7c_job_tracker_foundation_schema.py  c3d4e5f6a7b8_add_job_profile_tables.py  d4e5f6a7b8c9_add_rendered_resume_table.py  e5f6a7b8c9d0_agent_state_and_extraction_v2.py  f6a7b8c9d0e1_add_experience_location_columns.py  g7h8i9j0k1l2_add_personal_summary_location_phone.py  h8i9j0k1l2m3_add_research_journal_year.py  i9j0k1l2m3n4_add_projects_technologies.py  j0j1k2l3m4n5_add_email_agent_runs.py  m1n2o3p4q5r6_drop_extracted_salary_range.py  n3o4p5q6r7s8_add_opening_resume_section_jsonb.py
backend/app/: app.py
backend/scripts/: check_db.py  extract_resume.py  find_best_resume.py  find_data.py  render_and_save.py  run_agent_demo.py  run_agent_real.py  run_openai_pm.py  scaffold_new_project.py  setup_local_db.sql  test_resume_agent.py
backend/uvloop/: __init__.py
(+500 files in other folders)
