[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Tutorial T1"
readme = "README.md"
authors = [
    { name = "SHADOWDRAGON2K01", email = "siddheshcoursemail@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "httptools>=0.7.1",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic[email]>=2",
    "pydantic-settings>=2.13.1",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "bleach>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"


